# feedback-over-form

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
paper/: paper.bbl  paper.tex  references.bib
results/: error_taxonomy.json  iteration_analysis.json  main_results.json
results/neat_runs/: temp0_champion.json  v2_champion.json  v3_champion.json
scripts/: run_code_benchmark.py  run_code_neat.py  run_error_analysis.py  run_revalidation.py
src/feedback_over_form/: __init__.py  code_executor.py  code_neat_genome.py  code_pipeline.py  inference_client.py  prompts.py
