[project]
name = "feedback-over-form"
version = "0.1.0"
description = "Why execution feedback matters more than pipeline topology in 1-3B code generation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "L3G", email = "35130228+L3G@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback_over_form"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
